--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changelog
 =========
 
-0.2.0 (Unreleased)
+0.2.0 (2010-12-03)
 ------------------
 
-* ???
+* take care of the option set in "*Show content type icons*" [keul]
+* portlet is not more show empty, when there are not contents to display [keul]
+* added some tests [keul]
 
 0.1.0 (2010-11-25)
 ------------------
